# yogoNNet

./: CMakeLists.txt  README.md
source/header/: layers.hpp  net.hpp  net_constant.h  utils.hpp  yogoNNet.h
source/src/: layers.cpp  net.cpp
test/: main_test.cpp
